chore: prevent vertical jump on hover.

--- a/styles/article.css
+++ b/styles/article.css
@@ -2,7 +2,7 @@
 
 .articles {
 	display: grid;
-	column-gap: var(--spacing-l);
+	column-gap: var(--spacing);
 	grid-template-columns: var(--grid-article-columns, var(--grid-repeat-3));
 }
   
